changes to make it less laggy